[package]
name = "odht"
version = "0.1.0"
authors = ["Michael Woerister <michaelwoerister@posteo.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
rand = "0.8.2"
rustc-hash = "1.1.0"

[features]
nightly = []
no_simd = []
